# viergewinnt-rs

./: Cargo.toml  README.md
src/: ai_player.rs  game.rs  lib.rs  main.rs  minmax.rs
